--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="id" :data-theme="isDarkMode ? 'dark' : 'light'">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <meta name="theme-color" content="#3B82F6" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#3B82F6" />
     <title>Expense Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -1156,7 +1157,8 @@
           </div>
         </form>
       </div>
-    </div>    <!-- Load JS files -->
+    </div>
+    <!-- Load JS files -->
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
   </body>
